*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.30 ===
* Added left/right and mid/side linking in the UI.

=== 1.0.29 ===
* Updated build scripts and dependencies.

=== 1.0.28 ===
* Updated build scripts and dependencies.

=== 1.0.27 ===
* Updated build scripts and dependencies.

=== 1.0.26 ===
* Fixed compilation on modern compilers.
* Updated build scripts and dependencies.

=== 1.0.25 ===
* Added send/return options to communicate with another equalizers/plugins.
* Updated build scripts and dependencies.

=== 1.0.24 ===
* Updated build scripts and dependencies.

=== 1.0.23 ===
* Updated build scripts and dependencies.

=== 1.0.22 ===
* Updated build scripts and dependencies.

=== 1.0.21 ===
* Updated build scripts and dependencies.

=== 1.0.20 ===
* Implemented separate input and output signal spectrum analysis.
* Implemented automatic scale of spectrum graph switch.
* Updated zoom fader.
* Added support of variable size of filter dots.
* Added gain level display for filter info.
* Updated build scripts and dependencies.

=== 1.0.19 ===
* Updated build scripts and dependencies.

=== 1.0.18 ===
* Updated build scripts and dependencies.

=== 1.0.17 ===
* Updated build scripts and dependencies.

=== 1.0.16 ===
* Updated build scripts and dependencies.

=== 1.0.15 ===
* Updated build scripts and dependencies.

=== 1.0.14 ===
* Updated build scripts and dependencies.

=== 1.0.13 ===
* Added frequency display and gain for each filter.
* Updated build scripts and dependencies.

=== 1.0.12 ===
* Updated build scripts and dependencies.

=== 1.0.11 ===
* Fixed invalid version number in metadata.

=== 1.0.10 ===
* Updated build scripts and dependencies.

=== 1.0.9 ===
* Updated build scripts and dependencies.

=== 1.0.8 ===
* Updated build scripts and dependencies.

=== 1.0.7 ===
* Updated build scripts and dependencies.

=== 1.0.6 ===